<resources>
    <string name="app_name">Health</string>
    <string name="button">Button</string>
    <string name="name">Name :</string>
    <string name="backgroundImage" />
    <string name="health">Health</string>
    <string name="run">Run</string>
    <string name="view_medical_id">View Medical ID</string>
    <string name="edit_medical_id">Edit Medical ID</string>
    <string name="add_reminders">Add Reminders</string>
    <string name="Run">Run</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="total_distance">Total Distance :</string>
    <string name="average_pace">Average Pace :</string>
    <string name="number_of_steps">Number of Steps :</string>
    <string name="MedicalId">Medical ID</string>
    <string name="Calender">Calendar</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="medical_conditions">Medical Conditions :</string>
    <string name="allergies_and_reactions"><![CDATA[Allergies & Reactions :]]></string>
    <string name="medications">Medications :</string>
    <string name="viewPrescription">View Prescription</string>
    <string name="view_image">View Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="MedID_Submit">Submit</string>
    <string name="reminder">Reminder</string>
    <string name="appointmentDate">Date</string>
    <string name="appointmentName">Appointment</string>
    <string name="appointmentTime">Time</string>
    <string name="appointmentSave">Save</string>
    <string name="workoutMenu">Workout</string>
    <string name="mealsMenu">Meals</string>
    <string name="homeMenu">Home</string>
    <string name="healthMenu">Health</string>
    <string name="routinesMenu">Routines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main7">MainActivity7</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="todo1">TODO</string>

    <!-- Strings used for Manifest -->
    <string name="map_key" translatable="false">AIzaSyB5TV3WKNkL5oFV8U2L4caFIsBQIkgkP9s</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
    <string name="enter_full_name">enter full name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view_details">View Details</string>
    <string name="title_activity_health_calender">HealthCalenderActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_health_cal">HealthCalActivity</string>
    <string name="leftBtn"><![CDATA[<-]]></string>
    <string name="rightBtn"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="calendarWeekly">Weekly</string>
    <string name="weekly">Weekly</string>
    <string name="new_event">New Event</string>
    <string name="daily">Daily</string>
</resources>
