<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav"
        android:title="@string/homeMenu"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/meals_nav"
        android:icon="@drawable/ic_food2"
        android:iconTint="@color/white"
        android:title="@string/mealsMenu" />
    <item
        android:id="@+id/workout_nav"
        android:title="@string/workoutMenu"
        android:icon="@drawable/ic_workout"/>
    <item
        android:id="@+id/health_nav"
        android:title="@string/healthMenu"
        android:icon="@drawable/ic_health"/>
    <item
        android:id="@+id/routines_nav"
        android:title="@string/routinesMenu"
        android:icon="@drawable/ic_route"/>

</menu>

<!---->